Change the letter-spacing on the sun and moon so the text is centred correctly.

--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ body {
     margin-top: -20px;
     margin-left: -20px;
     border-radius: 50%;
+    letter-spacing: 1px;
     line-height: 40px;
 }
 
